Modifiqué cosas del CSS / SCSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button onclick="topFunction()" id="myBtn"><i class="fas fa-arrow-up p-3"></i></button>
     <header>      
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-darker">
-          <div class="container">
+          <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
               <img src="img/logo.png" alt="logo">
             </a>
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="contacto.html">Contacto</a>
+                  <a class="nav-link effect-box" href="contacto.html">Contacto</a>
                 </li>
                 <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -42,7 +42,7 @@
           </div>
         </nav>
     </header>
-    <main class="d-flex align-items-center">
+    <main class="d-flex align-items-center wrap main">
       <div class="container">
         <div class="row justify-content-between vertical-align-middle">
           <div class="col-sm-12 col-lg-4">
@@ -51,7 +51,7 @@
               Te damos la bienvenida a este espacio virtual, en donde podrás conocer las obras más emblemáticas de los llamados “old masters” (antiguos maestros). 
             </p>
           </div>
-          <div class="flipster col-lg-8 align-self-center pl-lg-1">
+          <div class="flipster col-lg-6 align-self-center pl-lg-1">
             <ul class="flip-items">
               <li>
                 <img src="img/paintings/a-la-recherche-du-temps-perdu.jpg" alt="A La Recherche Du Temps Perdu">
@@ -66,7 +66,36 @@
           </div>
         </div>
       </div>
-    </div>
+      <div class="c-scrolldown">
+        <div class="c-line"></div>
+      </div>
+      <!-- <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg>    
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg>    
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg>    
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg>    
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg>    
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg>    
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg>    
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg>    
+      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
+        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
+      </svg> -->
     </main>    
     <section id="about" class="section">
       <div class="container">
@@ -84,13 +113,13 @@
         </div>
       </div>
     </section>
-    <section id="art" class="section">
+    <section id="art" class="section art">
       <div class="container">
-        <div class="row">
-          <div class="col-md-4 art__card wow animate__animated animate__fadeInUp animate__slow">
-            <div class="card border-0 text-white h-100">
+        <div class="row d-flex justify-content-between">
+          <div class="col-md-6 art__card wow animate__animated animate__fadeInUp animate__slow">
+            <div class="border-0 text-white h-100">
               <img class="card-img-top" src="img/paintings/lady-godiva.jpg" alt="Lady Godiva">
-              <div class="card-body bg-dark">
+              <div class="card-body">
                 <h5 class="card-subtitle mt-1 mb-2 text-muted">Lady Godiva</h5>
                 <a href="john-collier.html">
                   <h4 class="card-title mb-3 text-white">John Collier</h4>
@@ -100,10 +129,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 art__card wow animate__animated animate__fadeInUp animate__delay-1s animate__slow">
-            <div class="card border-0 text-white h-100">
+          <div class="col-md-6 art__card--active wow animate__animated animate__fadeInUp animate__delay-1s animate__slow">
+            <div class="border-0 text-white h-100">
               <img class="card-img-top" src="img/paintings/pandora.jpg" alt="Pandora">
-              <div class="card-body bg-dark">
+              <div class="card-body">
                 <h5 class="card-subtitle mt-1 mb-2 text-muted">Pandora</h5>
                 <a href="alexandre-cabanel.html">
                   <h4 class="card-title mb-3 text-white">Alexandre Cabanel</h4>
@@ -112,10 +141,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 art__card wow animate__animated animate__fadeInUp animate__delay-2s animate__slow">
-            <div class="card border-0 text-white h-100">
+          <div class="col-md-6 art__card wow animate__animated animate__fadeInUp animate__delay-2s animate__slow">
+            <div class="border-0 text-white h-100 mt-lg-4">
               <img class="card-img-top" src="img/paintings/lady-agnew.jpg" alt="Lady Agnew">
-              <div class="card-body bg-dark">                  
+              <div class="card-body">                  
                 <h5 class="card-subtitle mt-1 mb-2 text-muted">Lady Agnew</h5>
                 <a href="john-singer-sargent.html">
                   <h4 class="card-title mb-3 text-white">John Singer Sargent</h4>  
@@ -124,10 +153,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 art__card wow animate__animated animate__fadeInUp animate__slow">
-            <div class="card border-0 text-white h-100 mt-lg-4">
+          <div class="col-md-6 art__card--active wow animate__animated animate__fadeInUp animate__slow">
+            <div class="border-0 text-white h-100 mt-lg-4">
               <img class="card-img-top" src="img/paintings/las-meninas.jpg" alt="Las Meninas">
-              <div class="card-body bg-dark">
+              <div class="card-body">
                 <h5 class="card-subtitle mt-1 mb-2 text-muted">Las Meninas</h5>
                 <a href="diego-velazquez.html">
                   <h4 class="card-title mb-3 text-white">Diego Velázquez</h4>
@@ -136,10 +165,10 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 art__card wow animate__animated animate__fadeInUp animate__delay-2s animate__slow">
+          <!-- <div class="col-md-4 art__card wow animate__animated animate__fadeInUp animate__delay-2s animate__slow">
             <div class="card border-0 text-white h-100 mt-lg-4">
               <img class="card-img-top" src="img/paintings/girl-with-a-pearl-earring.jpg" alt="Girl With a Pearl Earring">
-              <div class="card-body bg-dark">
+              <div class="card-body">
                 <h5 class="card-subtitle mt-1 mb-2 text-muted">Girl With a Pearl Earring</h5>
                 <a href="johannes-vermeer.html">
                   <h4 class="card-title mb-3 text-white">Johannes Vermeer</h4>
@@ -159,7 +188,7 @@
                 <p class="card-text">Las decenas de autorretratos de Rembrandt fueron una parte importante de su obra. Rembrandt creó cerca de cien autorretratos que incluyen más de cuarenta pinturas, treinta y un aguafuertes y unos siete dibujos.</p>
               </div>
             </div>
-          </div>        
+          </div>         -->
         </div>
       </div>
     </section>
