Modificaciones CSS y SCSS, cambios en el HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn"><i class="fas fa-arrow-up p-3"></i></button>
-    <header>      
+    <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-darker">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
@@ -27,16 +27,11 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link effect-box" href="contacto.html">Contacto</a>
+                  <a class="nav-link effect-underline" href="views/artistas.html">Artistas</a>
                 </li>
-                <!-- <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
-                </li> -->
+                <li class="nav-item active">
+                  <a class="nav-link effect-underline" href="views/contacto.html">Contacto</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -69,33 +64,6 @@
       <div class="c-scrolldown">
         <div class="c-line"></div>
       </div>
-      <!-- <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg>    
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg>    
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg>    
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg>    
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg>    
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg>    
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg>    
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg>    
-      <svg class="svg" xmlns="http://www.w3.org/2000/svg">
-        <path d="m2.46177,126.39581c10.12618,-0.06577 20.25237,-0.13151 30.37857,-0.19726c0.06666,-10.3997 0.13333,-20.7994 0.19999,-31.19908c10.07782,0 20.15564,0 30.23346,0c0,-10.46351 0,-20.927 0,-31.39051c10.33589,0 20.67178,0 31.00767,0c0,-10.20827 0,-20.41656 0,-30.62485c10.20829,0 20.41656,0 30.62485,0c0,-10.20829 0,-20.41658 0,-30.62487c15.18483,0 30.36965,0 45.55448,0c0,5.10414 0,10.20829 0,15.31243c-10.08071,0 -20.16136,0 -30.24206,0c0,10.33589 0,20.67178 0,31.00769c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33589 0,20.67178 0,31.00767c-10.20829,0 -20.41656,0 -30.62485,0c0,10.33591 0,20.6718 0,31.00767c-10.33589,0 -20.67178,0 -31.00767,0c0,10.46351 0,20.927 0,31.39049c-15.31243,0 -30.62485,0 -45.93728,0c0.68263,-5.07223 -1.16374,-10.79174 0.43769,-15.68938l0,0z" stroke-width="7" fill="none" />
-      </svg> -->
     </main>    
     <section id="about" class="section">
       <div class="container">
@@ -116,79 +84,55 @@
     <section id="art" class="section art">
       <div class="container">
         <div class="row d-flex justify-content-between">
-          <div class="col-md-6 art__card wow animate__animated animate__fadeInUp animate__slow">
-            <div class="border-0 text-white h-100">
-              <img class="card-img-top" src="img/paintings/lady-godiva.jpg" alt="Lady Godiva">
-              <div class="card-body">
-                <h5 class="card-subtitle mt-1 mb-2 text-muted">Lady Godiva</h5>
-                <a href="john-collier.html">
-                  <h4 class="card-title mb-3 text-white">John Collier</h4>
-                </a>
-                <p class="card-text">Collier retrata la puesta en marcha del reto de la condesa, el punto de inflexión en la trama de la leyenda de Lady Godiva, siendo así una de las representaciones más destacadas de la misma.
-                </p>
+          <div class="col-lg-6 art__card wow animate__animated animate__fadeInUp animate__slow">
+            <a href="views/john-collier.html">
+              <div class="border-0 text-white h-100">
+                <img class="art__card-img" src="img/paintings/lady-godiva.jpg" alt="Lady Godiva">
+                <div class="art__card-body">
+                  <h5 class="card-subtitle mt-1 mb-2 text-muted">Lady Godiva</h5>                
+                    <h4 class="card-title mb-3 text-white">John Collier</h4>                
+                  <p class="card-text">Collier retrata la puesta en marcha del reto de la condesa, el punto de inflexión en la trama de la leyenda de Lady Godiva, siendo así una de las representaciones más destacadas de la misma.
+                  </p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="col-md-6 art__card--active wow animate__animated animate__fadeInUp animate__delay-1s animate__slow">
-            <div class="border-0 text-white h-100">
-              <img class="card-img-top" src="img/paintings/pandora.jpg" alt="Pandora">
-              <div class="card-body">
-                <h5 class="card-subtitle mt-1 mb-2 text-muted">Pandora</h5>
-                <a href="alexandre-cabanel.html">
-                  <h4 class="card-title mb-3 text-white">Alexandre Cabanel</h4>
-                </a>
-                <p class="card-text">Cabanel representa a la soprano sueca Christine Nilsson como Pandora, la mujer de la mitología griega que abrió una caja prohibida, liberando todos los problemas que afligen a la humanidad.</p>
+          <div class="col-lg-6 art__card--active wow animate__animated animate__fadeInUp animate__delay-1s animate__slow">
+            <a href="views/alexandre-cabanel.html">
+              <div class="border-0 text-white h-100">
+                <img class="art__card-img" src="img/paintings/pandora.jpg" alt="Pandora">                
+                <div class="art__card-body">
+                  <h5 class="card-subtitle mt-1 mb-2 text-muted">Pandora</h5>                    
+                    <h4 class="card-title mb-3 text-white">Alexandre Cabanel</h4>                    
+                  <p class="card-text">Cabanel representa a la soprano sueca Christine Nilsson como Pandora, la mujer de la mitología griega que abrió una caja prohibida, liberando todos los problemas que afligen a la humanidad.</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="col-md-6 art__card wow animate__animated animate__fadeInUp animate__delay-2s animate__slow">
-            <div class="border-0 text-white h-100 mt-lg-4">
-              <img class="card-img-top" src="img/paintings/lady-agnew.jpg" alt="Lady Agnew">
-              <div class="card-body">                  
-                <h5 class="card-subtitle mt-1 mb-2 text-muted">Lady Agnew</h5>
-                <a href="john-singer-sargent.html">
-                  <h4 class="card-title mb-3 text-white">John Singer Sargent</h4>  
-                </a>
-                <p class="card-text">Sargent pudo retratar la mirada directa y la pose informal de Lady Agnew, enfatizadas por la tela fluida y la faja lila de su vestido, asegurando el impacto sorprendente del retrato.</p>
+          <div class="col-lg-6 art__card wow animate__animated animate__fadeInUp animate__slow">
+            <a href="views/john-singer-sargent.html">
+              <div class="border-0 text-white h-100 mt-lg-4">
+                <img class="art__card-img" src="img/paintings/lady-agnew.jpg" alt="Lady Agnew">
+                <div class="art__card-body">                  
+                  <h5 class="card-subtitle mt-1 mb-2 text-muted">Lady Agnew</h5>
+                    <h4 class="card-title mb-3 text-white">John Singer Sargent</h4>
+                  <p class="card-text">Sargent pudo retratar la mirada directa y la pose informal de Lady Agnew, enfatizadas por la tela fluida y la faja lila de su vestido, asegurando el impacto sorprendente del retrato.</p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
-          <div class="col-md-6 art__card--active wow animate__animated animate__fadeInUp animate__slow">
-            <div class="border-0 text-white h-100 mt-lg-4">
-              <img class="card-img-top" src="img/paintings/las-meninas.jpg" alt="Las Meninas">
-              <div class="card-body">
-                <h5 class="card-subtitle mt-1 mb-2 text-muted">Las Meninas</h5>
-                <a href="diego-velazquez.html">
-                  <h4 class="card-title mb-3 text-white">Diego Velázquez</h4>
-                </a>  
-                <p class="card-text">Representa a la infanta Margarita de Austria, y a otros personajes. El artista resolvió con gran habilidad los problemas de composición del espacio, gracias al dominio que tenía del color y a la facilidad para caracterizar a los personajes.</p>
+          <div class="col-lg-6 art__card--active wow animate__animated animate__fadeInUp animate__delay-1s animate__slow">
+            <a href="views/diego-velazquez.html">
+              <div class="border-0 text-white h-100 mt-lg-4">
+                <img class="art__card-img" src="img/paintings/las-meninas.jpg" alt="Las Meninas">
+                <div class="art__card-body">
+                  <h5 class="card-subtitle mt-1 mb-2 text-muted">Las Meninas</h5>
+                    <h4 class="card-title mb-3 text-white">Diego Velázquez</h4>
+                  <p class="card-text">Representa a la infanta Margarita de Austria, y a otros personajes. El artista resolvió con gran habilidad los problemas de composición del espacio, gracias al dominio que tenía del color y a la facilidad para caracterizar a los personajes.</p>
+                </div>
               </div>
-            </div>
+            </a> 
           </div>
-          <!-- <div class="col-md-4 art__card wow animate__animated animate__fadeInUp animate__delay-2s animate__slow">
-            <div class="card border-0 text-white h-100 mt-lg-4">
-              <img class="card-img-top" src="img/paintings/girl-with-a-pearl-earring.jpg" alt="Girl With a Pearl Earring">
-              <div class="card-body">
-                <h5 class="card-subtitle mt-1 mb-2 text-muted">Girl With a Pearl Earring</h5>
-                <a href="johannes-vermeer.html">
-                  <h4 class="card-title mb-3 text-white">Johannes Vermeer</h4>
-                </a>
-                <p class="card-text">Es una de las obras maestras del pintor neerlandés realizada entre 1665 y 1667, y, como el nombre indica, utiliza un pendiente de perla como punto focal.</p>
-              </div>
-            </div>  
-          </div>
-          <div class="col-md-4 art__card wow animate__animated animate__fadeInUp animate__delay-3s animate__slow">            
-            <div class="card border-0 text-white h-100 mt-lg-4">
-              <img class="card-img-top" src="img/paintings/rembrandt.jpg" alt="Rembrandt Self Portrait">
-              <div class="card-body bg-dark">
-                <h5 class="card-subtitle mt-1 mb-2 text-muted">Rembrandt Self-Portrait</h5>
-                <a href="rembrandt-harmenszoon.html">
-                  <h4 class="card-title mb-3 text-white">Rembrandt Harmenszoon</h4>
-                </a>  
-                <p class="card-text">Las decenas de autorretratos de Rembrandt fueron una parte importante de su obra. Rembrandt creó cerca de cien autorretratos que incluyen más de cuarenta pinturas, treinta y un aguafuertes y unos siete dibujos.</p>
-              </div>
-            </div>
-          </div>         -->
         </div>
       </div>
     </section>
@@ -196,7 +140,7 @@
         <div class="container">          
           <blockquote class="col-md-6 blockquote quote-text float-right p-3">     
             <p class="mb-0 text-light">"No hay reglas. Así es como nace el arte, cómo ocurren los avances. Ir en contra de las reglas o ignorar las reglas. De eso se trata la invención."</p>
-            <footer class="blockquote-footer">Helen <cite title="Source Title">Frankenthaler</cite></footer>
+            <footer class="blockquote-footer">Helen <cite title="apellido">Frankenthaler</cite></footer>
           </blockquote>
         </div>
     </section>  
@@ -208,7 +152,7 @@
             <p>Nos gustaría saber tu opinión sobre las obras aquí expuestas, y también que nos ayudes a crecer. Envianos un mensaje con tus recomendaciones, y sé parte de la comunidad.</p>
           </div>
           <div class="col-lg-3 align-self-center">
-            <a class="cta-btn p-4 float-lg-right" href="contacto.html">Contacto</a>
+            <a class="cta-btn p-4 float-lg-right" href="views/contacto.html">Contacto</a>
           </div>
         </div>
       </div>
