Meta tags para SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Galería de Arte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Alexia Glibota">
     <meta name="description" content="Galería de arte virtual, pensada para acercarte las obras más emblemáticas de los artistas que hicieron historia.">
     <meta name="keywords" content="arte, galería de arte, old masters, art, painting, pintura, óleo, pintura al óleo">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
